@@ -46,3 +46,5 @@ initialization =
 [versions]
 coverage = 3.4
 ohconvert = 1.0a1
+zc.recipe.egg = 1.3.0
+zc.buildout = 1.5.0
